# XEphem

./: .gitignore  meson.build
GUI/xephem/: XEphem.in  fallbacks.c  homeio.c  io.github.xephem.desktop  io.github.xephem.metainfo.xml  meson.build  xmisc.c
flatpak/: build.sh  io.github.xephem.yml  motif-2.3.8-no-doc-or-demos.patch
libastro/: meson.build
libip/: meson.build
liblilxml/: meson.build
